# Estudos_Rust

./: README.md
Estudos/: próximos_estudos.txt
Estudos/Dioxus/: Documentação.txt
Estudos/Gtk/: livro_online.txt
Estudos/Gtk/gtk_01/: Cargo.toml
Estudos/Iced/: documentação.txt
Estudos/Iced/iced_editor/: Cargo.toml
Estudos/Leptos/: capítulo_parado.txt  document.txt  documentação.txt  settings.json
Estudos/Leptos/Projetos/Capítulo_3/cap_3_7/: Cargo.toml
Estudos/Leptos/Projetos/cap_3_4/: Cargo.toml
Estudos/Leptos/Projetos/cap_3_4/src/: main.rs
Estudos/Leptos/vscode/: settings.json
Estudos/Livro_Rust/: capítulo_parado.txt  livro_online_curso.txt
Estudos/Postgresql/: link_da_página.txt
Estudos/Sqlite/: documentação.txt
Estudos/Tauri/: document.txt  estudo_react.txt  estudo_svelteKit.txt  estudo_tailwindcss.txt  estudo_tauri.txt  estudo_vite.txt  estudos_svelte.tst  estudos_svelte.txt
Estudos/Tokio/: documentação.txt
Gtk4/: capítulo_parado.txt
Gtk4/Projetos/memory-management/: Cargo.toml
Gtk4/Projetos/my-gtk-app/: Cargo.toml
Leptos/: capítulo_parado.txt
Livro/: aula_parada.txt
Livro/Projetos/result/: hello_01.txt
Livro_Rust/: aula_parada.txt  capítulo_parado.txt
Livro_Rust/Projetos/deref_cap/: Cargo.toml
Livro_Rust/Projetos/drop_cap/: Cargo.toml
Livro_Rust/Projetos/hello_world/: main
Livro_Rust/Projetos/minigrep/: output.txt
Livro_Rust/Projetos/thread_shared_state_cap/: Cargo.toml
Projetos/: Projeto_De_Estudo_Rust.code-workspace
Projetos/exercícios_de_estudo/: Cargo.toml
Tauri/: capítulo_parado.txt
(+374 files in other folders)
